  It's a fix for http://jircii.hick.org/cgi-bin/bitch.cgi/view.html?8150450
  (Serge)
- Fixed pasting of multiple lines deleting current input field text (Serge)
- Implemented automatic word wrapping of long messages if packet doesn't
  fit 512 bytes RFC length. For details check this link:
  http://www.resultspk.net/hackirc/irchks-chp-13-sect-3.html (Serge)


Beta    39 release 07.30.05
====
- The find feature is now case insensitive (oracel)
- Fixed bug in command history, the history was not reset when pasting
  multiple lines of text (oracel)
- Fixed flipped Ctrl+Click and Shift+Click behavior in the nicklist (Serge)
- Modified the built-in /topic command to display the current topic
  instead of unsetting it if no topic message was specified. (oracel)
- Added the built-in command /ut to unset the topic in a given channel.
  (oracel)
- Both /topic and /ut now uses the currently active channel name if no
  channel name is excplicitly given as a parameter to the respective
  commands (oracel)
- Fixed bug with quit message showing twice in the status (turned out to
  be a problem with the printAll function which has been fixed).
- Fixd bug with IRC parser not creating $PARMS$ correctly when only a
  : is present.
- &use (in jIRCii) now cache's the shared script instance causing any
  loaded modules to be instantiated only once for all jIRCii sessions
- fixed several bugs in the MDI window management routines
- Added a workaround to keep Ctrl+Tab from freezing jIRCii on Windows.
  Ctrl+Tab can still be binded by scripts though.

Beta    38 released 07.18.05
====
- jIRCii command history behavior has been completely overhauled to feel
  more like mIRC and other clients (oracel)
- fixed pasted text being omitted from command history (oracel)
- a bug has been fixed where jIRCii list dialogs (/list etc.) did not
  have the appropriate row height set (Serge)
- windows can now be closed by shift+clicking the switchbar button (Serge)